--- a/receiptID_2_Model.ipynb
+++ b/receiptID_2_Model.ipynb
@@ -53,8 +53,8 @@
     "\n",
     "|item|mapping|\n",
     "|---|---|\n",
-    "|Kale  | \"Food/Produce/Kale\"  |\n",
-    "|Vinegar white wine 50 grain  | \"Food/Dry-Grocery/Vinegars/White Wine Vinegar\"  |\n",
+    "|organic baby spinach  | \"Food/Produce/Spinach\"  |\n",
+    "|eel river organic 15.5  | \"Beverages/Alcoholic/Beers\"  |\n",
     "|Imported nat flank steak  | \"Food/Meats/Beef/Flank Steak\"  |\n",
     "\n",
     "\n",
@@ -63,7 +63,7 @@
     "    - Explore the dataset to ensure its integrity and understand the context. \n",
     "2. Identify features that may be used. \n",
     "    - If possible, engineer features that might provide greater discrimination.\n",
-    "3. Build **k** independent *text-based* classifiers for the text-based features and feed the output from these classifiers into the next layer classifier which takes in the other features. This approach combines information from both the text-based labels as well as the item’s metadata. Explore a couple of classifiers that might be well suited for the problem at hand.\n",
+    "3. Build $K$ independent *text-based* classifiers for the text-based features and feed the output from these classifiers into the next layer classifier which takes in the other features. This approach combines information from both the text-based labels as well as the item’s metadata. Explore a couple of classifiers that might be well suited for the problem at hand.\n",
     "    - RandomForest\n",
     "    - DecisionTree\n",
     "    - SVC\n",
@@ -1056,7 +1056,7 @@
     "\n",
     "With the training sets done, I vectorized them using a mean embedding vectorizer. For each category, I created an AdaBoost binary classifier. I chose to use the AdaBoost after I experimented with several classifiers like LinearSVM and Decision Trees. I first selected Decision Tree since it outperformed the LinearSVM for this problem. However, I quickly realized my aim was to get predicted probabilities as output for the class instead of simple binary output which the Decision Tree gave. For that reason, I switched to AdaBoost, which is a *boosted* decision tree. \n",
     "\n",
-    "I train each classifier using a k=5 kfold cross-validation scheme. I fitted the resulting classifier and retrieved the predicted probability for each data point in the dataset, which resulted in *k* vectors for *k* categories."
+    "I train each classifier using a $K=5$ kfold cross-validation scheme. I fitted the resulting classifier and retrieved the predicted probability for each data point in the dataset, which resulted in *$K$* vectors for *$K$* categories."
    ]
   },
   {
@@ -1225,8 +1225,8 @@
     "        \n",
     "        # persist model\n",
     "        joblib.dump(Ada_w2v, 'data/category_classifier/catg_'+str(key)+'.pkl')\n",
-    "        print('Finished training category{0}: {1}\\n'.format(key, name.ix[the_index]))\n",
-    "        target.write('Finished training category{0}: {1}\\n\\n'.format(key, name.ix[the_index]))\n",
+    "        print('Finished training category {0}: {1}\\n'.format(key, name.ix[the_index]))\n",
+    "        target.write('Finished training category {0}: {1}\\n\\n'.format(key, name.ix[the_index]))\n",
     "        \n",
     "target.close()    \n",
     "print(\"done in %0.3fs\" % (time() - t0))\n",
