--- a/receiptID_2_Model.ipynb
+++ b/receiptID_2_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -1054,9 +1054,12 @@
    "source": [
     "## Modeling\n",
     "\n",
-    "With the training sets done, I vectorized them using a mean embedding vectorizer. For each category, I created an AdaBoost binary classifier. I chose to use the AdaBoost after I experimented with several classifiers like LinearSVM and Decision Trees. I first selected Decision Tree since it outperformed the LinearSVM for this problem. However, I quickly realized my aim was to get predicted probabilities as output for the class instead of simple binary output which the Decision Tree gave. For that reason, I switched to AdaBoost, which is a *boosted* decision tree. \n",
+    "With the training sets done, I vectorized them using a mean embedding vectorizer. \n",
     "\n",
-    "I train each classifier using a $K=5$ kfold cross-validation scheme. I fitted the resulting classifier and retrieved the predicted probability for each data point in the dataset, which resulted in *$K$* vectors for *$K$* categories."
+    "### Classifier Selection\n",
+    "Based on how the positive and negative samples of the categories were generated, i.e., encoding the category hierarchy into the learning set, I inferred that the classes for each category would be linearly seperable. So for classifier selection, I experimented with an SVM, and AdaBoost and Random Forest. The SVM took too long to run for $K$ = 5 fold cross-validation. While AdaBoost ran faster, the score was lower than that of the Random Forest. Further, I could parallelize the Random Forest which significantly improved the running time.\n",
+    "\n",
+    "For each category, I created an Random Forest binary classifier. I train each classifier using a $K=5$ fold cross-validation scheme. I fitted the resulting classifier and retrieved the predicted probability for each data point in the dataset, which resulted in *$K$* vectors for *$K$* categories. For each classifier, I calibrated its predicted probability by using an *isotonic* calibration."
    ]
   },
   {
@@ -1068,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1085,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -1103,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -1113,7 +1116,7 @@
     "from xgboost.sklearn import XGBClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -1125,7 +1128,117 @@
     "from sklearn.externals import joblib\n",
     "\n",
     "seed = 342 # For reproducability\n",
-    "Ada_w2v =  Pipeline([(\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)), (\"Ada\", AdaBoostClassifier(n_estimators=10))])\n"
+    "Ada_w2v =  Pipeline([(\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)), \n",
+    "                     (\"Ada\", AdaBoostClassifier(n_estimators=10))])\n",
+    "\n",
+    "RF_w2v = Pipeline([(\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)), \n",
+    "                   (\"RF\", RandomForestClassifier(n_estimators=10, n_jobs=4, random_state=seed))])\n",
+    "\n",
+    "isotonic_Ada = Pipeline([(\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)), \n",
+    "          (\"Calibrate\", CalibratedClassifierCV(AdaBoostClassifier(n_estimators=10), cv=2, method='isotonic'))])\n",
+    "\n",
+    "isotonic_RF = Pipeline([(\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)), \n",
+    "          (\"Calibrate\", CalibratedClassifierCV(RandomForestClassifier(n_estimators=10, n_jobs=4, random_state=seed), \n",
+    "                                               cv=2, method='isotonic'))])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully shuffled and split the data!\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = 1164\n",
+    "\n",
+    "category_positive_samples[key].loc[:,('is_category')] = 1\n",
+    "category_negative_samples[key].loc[:,('is_category')] = 0\n",
+    "\n",
+    "# Split into training and testing set\n",
+    "data = category_positive_samples[key].append(category_negative_samples[key], ignore_index=True)\n",
+    "X = data['item_labels']\n",
+    "y = data['is_category']\n",
+    "\n",
+    "num_train = (len(X) // 10) * 6\n",
+    "try:\n",
+    "    X_train, y_train, X_Calibrate, y_Calibrate = shuffle_split_data(X, y)\n",
+    "    print (\"Successfully shuffled and split the data!\")\n",
+    "except:\n",
+    "    print (\"Something went wrong with shuffling and splitting the data.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training with AdaBoost 1164: Brut\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_name = df_catergory_lookup.category_id == key\n",
+    "name = df_catergory_lookup[find_name].category_name\n",
+    "the_index = name.index[0]\n",
+    "\n",
+    "print (\"Training with AdaBoost {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "t0 = time()\n",
+    "scores_Ada = cross_val_score(Ada_w2v,  X_train, y_train, cv=5, scoring='f1').mean()\n",
+    "isotonic_Ada.fit(X_Calibrate, y_Calibrate)\n",
+    "pred_proba_Ada = isotonic_Ada.predict_proba(X_Calibrate)\n",
+    "t1 = time() - t0\n",
+    "print('Time: {0}, Score:{1}'.format(t1, scores_Ada))\n",
+    "\n",
+    "print (\"Training with Random Forest on 4 cores {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "t0 = time()\n",
+    "scores_RF = cross_val_score(RF_w2v,  X_train, y_train, cv=5, scoring='f1').mean()\n",
+    "isotonic_RF.fit(X_Calibrate, y_Calibrate)\n",
+    "pred_proba_RF = isotonic_RF.predict_proba(X_Calibrate)\n",
+    "t1 = time() - t0\n",
+    "print('Time: {0}, Score:{1}'.format(t1, scores_RF))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40832    [pork, shldr, butt, bnls, f2f, trmd]\n",
+       "40833                [nut, hazel, per, pound]\n",
+       "40834               [fish, sauc, thai, squid]\n",
+       "40835          [pad, scour, blue, max, power]\n",
+       "40836                    [charwood, charcoal]\n",
+       "Name: item_labels, dtype: object"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
    ]
   },
   {
@@ -1194,15 +1307,12 @@
     "    target = open(dataPath+'data/train_log_'+strftime(\"%d_%b_%Y_%H_%M_%S\", gmtime())+'.txt', 'w')\n",
     "    \n",
     "    \n",
-    "        \n",
-    "\n",
     "for key in category_positive_samples:\n",
     "    if str(key) in scores:\n",
     "        continue\n",
     "    if key in scores:\n",
     "        continue\n",
     "    else:\n",
-    "        find_name = df_catergory_lookup.category_id == key\n",
     "        name = df_catergory_lookup[find_name].category_name\n",
     "        the_index = name.index[0]\n",
     "\n",
@@ -1219,12 +1329,12 @@
     "        target.write(\"Number of datapoints in set {}\\n\".format(len(X)))\n",
     "        target.write('Training the model....\\n')\n",
     "        \n",
-    "        scores[key] = cross_val_score(Ada_w2v,  X, y, cv=5, scoring='f1').mean()\n",
-    "        Ada_w2v.fit(X, y)\n",
-    "        pred_proba[key] = Ada_w2v.predict_proba(X)\n",
+    "        scores[key] = cross_val_score(RF_w2v,  X, y, cv=5, scoring='f1').mean()\n",
+    "        isotonic_RF.fit(X, y)\n",
+    "        pred_proba[key] = isotonic_RF.predict_proba(X)\n",
     "        \n",
     "        # persist model\n",
-    "        joblib.dump(Ada_w2v, 'data/category_classifier/catg_'+str(key)+'.pkl')\n",
+    "        joblib.dump(RF_w2v, dataPath+'data/category_classifier/catg_'+str(key)+'.pkl')\n",
     "        print('Finished training category {0}: {1}\\n'.format(key, name.ix[the_index]))\n",
     "        target.write('Finished training category {0}: {1}\\n\\n'.format(key, name.ix[the_index]))\n",
     "        \n",
@@ -1286,7 +1396,7 @@
     "</figure>\n",
     "After training the *k=141* classifiers, I extracted the *k* vectors; I carefully combined them with the engineered features, and the other raw metadata taking care to ensure that I assigned the right probabilities to the right data points in my training set. I feed these features and labels into a multi-label, multi-class AdaBoost classifier. \n",
     "\n",
-    "I feed these features and labels into a multi-label, multi-class Random Forest classifier. I took 75% of the data for training and 25% for testing. Once again I do a 5 fold cross-validation scheme, fit the final classifier, and retrieve the predicted class probabilities.\n",
+    "I feed these features and labels into a multi-label, multi-class Random Forest classifier. I took 75% of the data for training and 25% for testing. Once again I do a 5 fold cross-validation scheme, fit the final classifier, and retrieve the predicted class.\n",
     "\n",
     "\n",
     "#### Get Data for Final Classifier"
