--- a/receiptID_1_Data_Preprocessing.ipynb
+++ b/receiptID_1_Data_Preprocessing.ipynb
@@ -213,13 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def find_category(list_of_records):\n",
+    "    '''Returns a list of categories.\n",
+    "    Args:\n",
+    "        list_of_records: pandas series\n",
+    "    Returns:\n",
+    "        list of categories.\n",
+    "    '''\n",
     "    lst = []\n",
     "    for r in list_of_records:\n",
     "        lst.append(r)\n",
@@ -419,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -432,6 +438,10 @@
     "def preprocess_label_names(text_df):\n",
     "    \"\"\"\n",
     "    Simple preprocessing pipeline which uses RegExp, sets basic token requirements, and removes stop words.\n",
+    "    Args:\n",
+    "        text_df: pandas dataframe column\n",
+    "    Returns:\n",
+    "        cleaned features.\n",
     "    \"\"\"\n",
     "\n",
     "    # extend stop words to capture modifiers like gluten\n",
