--- a/receiptID_2_Model.ipynb
+++ b/receiptID_2_Model.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -232,9 +232,32 @@
     "        name = df_catergory_lookup[find_name].category_name\n",
     "        the_index = name.index[0]\n",
     "\n",
-    "    return the_categories, total\n",
-    "\n",
-    "\n"
+    "    return the_categories, total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_category_name(key):\n",
+    "    \"\"\"\n",
+    "    Get the name of a category\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    key : int\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if key in df_catergory_lookup.category_id.unique():\n",
+    "        find_name = df_catergory_lookup.category_id == key\n",
+    "        name = df_catergory_lookup[find_name].category_name\n",
+    "        the_index = name.index[0]\n",
+    "        return name.ix[the_index]\n",
+    "    else:\n",
+    "        print(str(key)+\" not in the dataframe\")"
    ]
   },
   {
@@ -261,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -305,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -347,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -412,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -448,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -486,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -508,12 +531,7 @@
    "source": [
     "level = 'level_0'\n",
     "for key in the_level[level].keys():\n",
-    "    find_name = df_catergory_lookup.category_id == key\n",
-    "    name = df_catergory_lookup[find_name].category_name\n",
-    "    the_index = name.index[0]\n",
-    "    \n",
-    "\n",
-    "    print (\"processing {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "    print (\"processing {0}: {1}\".format(key, get_category_name(key)))\n",
     "    # create POSITIVE training set\n",
     "    \n",
     "    key_df = df[level] == key\n",
@@ -553,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -634,11 +652,7 @@
    "source": [
     "level = 'level_2'\n",
     "for key in the_level[level].keys():\n",
-    "    find_name = df_catergory_lookup.category_id == key\n",
-    "    name = df_catergory_lookup[find_name].category_name\n",
-    "    the_index = name.index[0]\n",
-    "\n",
-    "    print (\"processing {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "    print (\"processing {0}: {1}\".format(key, get_category_name(key)))\n",
     "    # create POSITIVE training set\n",
     "    \n",
     "    key_df = df[level] == key\n",
@@ -652,7 +666,7 @@
     "        category_samples[key] = category_samples[key].append(df[key_df & positive_examples])\n",
     "        num_test = (len(category_samples[key]) // 10) * 2\n",
     "        category_positive_samples[key] = category_samples[key][num_test:]\n",
-    "        category_test_samples[key] = category_samples[key][:num_test]        \n",
+    "        category_test_samples[key] = category_samples[key][:num_test]    \n",
     "    \n",
     "    except:\n",
     "        print(\"This category didn't generate any feature set {0}\".format(key))\n",
@@ -685,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -743,11 +757,7 @@
    "source": [
     "level = 'level_3'\n",
     "for key in the_level[level].keys():\n",
-    "    find_name = df_catergory_lookup.category_id == key\n",
-    "    name = df_catergory_lookup[find_name].category_name\n",
-    "    the_index = name.index[0]\n",
-    "\n",
-    "    print (\"processing {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "    print (\"processing {0}: {1}\".format(key, get_category_name(key)))\n",
     "    # create POSITIVE training set\n",
     "    \n",
     "    key_df = df[level] == key\n",
@@ -799,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -824,11 +834,7 @@
    "source": [
     "level = 'level_4'\n",
     "for key in the_level[level].keys():\n",
-    "    find_name = df_catergory_lookup.category_id == key\n",
-    "    name = df_catergory_lookup[find_name].category_name\n",
-    "    the_index = name.index[0]\n",
-    "\n",
-    "    print (\"processing {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "    print (\"processing {0}: {1}\".format(key, get_category_name(key)))\n",
     "    # create POSITIVE training set\n",
     "    \n",
     "    key_df = df[level] == key\n",
@@ -906,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -941,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -971,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1022,11 +1028,8 @@
     "        if key in scores:\n",
     "            continue\n",
     "        else:\n",
-    "            find_name = df_catergory_lookup.category_id == key\n",
-    "            name = df_catergory_lookup[find_name].category_name\n",
-    "            the_index = name.index[0]\n",
-    "\n",
-    "            print (\"processing {0}: {1}\".format(key, name.ix[the_index]))\n",
+    "        \n",
+    "            print (\"processing {0}: {1}\".format(key, get_category_name(key)))\n",
     "            target.write(\"processing {0}: {1}\\n\".format(key, name.ix[the_index]))\n",
     "            category_positive_samples[key].loc[:,('is_category')] = 1\n",
     "            category_negative_samples[key].loc[:,('is_category')] = 0\n",
